HW/Graphic/SMM_CIF_0_1/SMM_CIF_0_1/solution1/.autopilot/db/fixed_point_stream_convolution.pp.0.cpp.clang-tidy.loop-label.out.log
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:2473:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:2473:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3447:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3447:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3461:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3461:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3475:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:3475:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:5104:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:5104:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9773:9: error: Resource with core_name: RAM_S2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=A core=RAM_S2P_LUTRAM
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9774:9: error: Resource with core_name: RAM_S2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=B core=RAM_S2P_BRAM
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9834:3: warning: Added loop label VITIS_LOOP_104_1:   [xilinx-label-all-loops]
  for (int i=0; i<32; i++)
  ^~~
  VITIS_LOOP_104_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9834:3: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9835:4: warning: Added loop label VITIS_LOOP_105_2:   [xilinx-label-all-loops]
   for (int j=0; j<75; j++)
   ^~~
   VITIS_LOOP_105_2: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9835:4: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9858:3: warning: Added loop label VITIS_LOOP_128_3:   [xilinx-label-all-loops]
  for (int num_imag=0; num_imag < batch_size; num_imag++){
  ^~~
  VITIS_LOOP_128_3: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9858:3: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9866:4: warning: Added loop label VITIS_LOOP_136_4:   [xilinx-label-all-loops]
   for (int iter=0; iter<A_COL_ITER; iter++){
   ^~~
   VITIS_LOOP_136_4: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9866:4: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9869:5: warning: Added loop label VITIS_LOOP_139_5:   [xilinx-label-all-loops]
    for(int i=0; i<1; i++)
    ^~~
    VITIS_LOOP_139_5: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9869:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9870:6: warning: Added loop label VITIS_LOOP_140_6:   [xilinx-label-all-loops]
     for(int j=0; j<75; j++)
     ^~~
     VITIS_LOOP_140_6: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9870:6: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9914:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_0 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9915:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_1 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9916:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_bound core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9917:2: warning: Added loop label VITIS_LOOP_187_7:   [xilinx-label-all-loops]
 for(unsigned int i = 0; i < KER_bound; i++){
 ^~~
 VITIS_LOOP_187_7: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SMM_CIF_0_1\SMM_CIF_0_1\solution1\.autopilot\db\fixed_point_stream_convolution.pp.0.cpp:9917:2: note: FIX-IT applied suggested code changes
